# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
generated_scenes/: practice1.ppm
samples/: practice3-1.ppm  practice3-2.ppm  practice3-2.txt  practice3-3.ppm  practice3-3.txt  practice3-4.ppm  practice3-4.txt  practice5-1.ppm  practice5-1.txt  practice5-2.ppm  practice5-2.txt  practice5-dragon-100k.ppm  practice5-dragon-10k.ppm  practice5-dragon-10k.txt
source/: bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  light.cpp  light.hpp  main.cpp  my_glm.cpp  my_glm.hpp  node_list.cpp  node_list.hpp  primitive.cpp  primitive.hpp  random.cpp  random.hpp  raw_pixels.cpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  task_pool.cpp  task_pool.hpp  vector_generator.cpp  vector_generator.hpp
source/bvh/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp
source/distribution/: box.cpp  box.hpp  cos_weighted.cpp  cos_weighted.hpp  distribution.hpp  ellipsoid.cpp  ellipsoid.hpp  mix.cpp  mix.hpp  multi_triangle.cpp  multi_triangle.hpp  primitive.cpp  primitive.hpp  primitive_distribition.hpp  primitive_distribution.cpp  triangle.cpp  triangle.hpp
source/parser/: data_acessor.cpp  data_acessor.hpp  glm_parse.cpp  glm_parse.hpp  gltf_material.cpp  gltf_material.hpp  node_list.cpp  node_list.hpp  parser.cpp  parser.hpp  types.hpp  utils.cpp  utils.hpp
source/primitives/: box.cpp  box.hpp  ellipsoid.cpp  ellipsoid.hpp  material.cpp  material.hpp  plane.cpp  plane.hpp  pprimitive.cpp  pprimitive.hpp  primitive.cpp  primitive.hpp  triangle.cpp  triangle.hpp
(+11 files in other folders)
